Fixed bug of overlapping dataCharts by first removing the content of dataChartDiv

--- a/styles.css
+++ b/styles.css
@@ -155,7 +155,9 @@
 }
 
 
-
+#dataChart{
+    height: 100%;
+}
 
 
 .navBarItem {
